--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A match-three puzzle game in CoffeeScript and AngularJS.",
   "main": "index.html",
   "scripts": {
-    "start": "coffee -o dist/ -cw src/"
+    "start": "watch 'npm run build' src/",
+    "build": "npm run build:css && npm run build:coffee",
+    "build:coffee": "coffee -o dist/ -c src/coffee",
+    "build:css": "autoprefixer src/css/*.css -d dist/",
+    "server": "ruby -run -e httpd . -p 8080"
   },
   "keywords": [
     "puzzle"
@@ -12,9 +16,9 @@
   "author": "katspaugh@gmail.com",
   "license": "BSD",
   "devDependencies": {
-    "coffee-script": "1.9.0"
-  },
-  "dependencies": {
-    "angular": "^1.3.13"
+    "coffee-script": "1.9.0",
+    "watch": "^0.14.0",
+    "angular": "^1.3.13",
+    "autoprefixer": "^5.1.0"
   }
 }
